# NaturalGate

./: .gitignore  NATURALGATE_WORKER_GUIA.md  README.md  natural-gate-ui.html
backend/: .coverage  .env.example  .gitlab-ci.yml  Dockerfile  README.md  coverage.xml  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 923261b1cade415dae015a7d5758413f_initial_schema_and_seed_data.py
backend/scripts/: start.sh
backend/src/natural_gate/: main.py
backend/src/natural_gate/core/: config.py  dependencies.py  exceptions.py  security.py
backend/src/natural_gate/domains/cars/api/: router.py  schemas.py
backend/src/natural_gate/domains/cars/models/: models.py
backend/src/natural_gate/domains/cars/orchestrator/: application_service.py
backend/src/natural_gate/domains/payments/api/: router.py
backend/src/natural_gate/domains/payments/models/: models.py
backend/src/natural_gate/domains/payments/orchestrator/: application_service.py
backend/src/natural_gate/domains/reservations/api/: router.py  schemas.py
backend/src/natural_gate/domains/reservations/models/: models.py
backend/src/natural_gate/domains/reservations/orchestrator/: application_service.py
backend/src/natural_gate/domains/stats/api/: router.py
backend/src/natural_gate/presentation/static/: index.html
backend/src/natural_gate/shared/infrastructure/: database.py  init_db.py  memory_store.py  orm_models.py  seed.py
backend/tests/: conftest.py
backend/tests/unit/: test_cars.py  test_payments.py  test_reservations.py
tunnel/: config.yml
(+6 files in other folders)
