[tool.poetry]
name = "natural-gate"
version = "1.0.0"
description = "Intelligent API gateway with car booking e-commerce backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "natural_gate", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
stripe = "^9.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"
httpx = "^0.27"
black = "^24.0"
ruff = "^0.6"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]
